--- a/HeartOfGold/Views/Help/Index.cshtml
+++ b/HeartOfGold/Views/Help/Index.cshtml
@@ -1,11 +1,26 @@
 ﻿
 @{
-    ViewBag.Title = "Online Help";
+    ViewBag.Title = "Getting Started";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div class="container center help-div-width">
     <h3>Frequently Asked Questions</h3>
+    <hr />
+
+    <div>
+        <p class="lead">
+            Welcome! If you're a student, please read below for a Quick Start guide on how to get started.
+        </p>
+    </div>
+    <div>
+        <ul class="text-justify">
+            <li><strong>Register</strong> an account! Log yourself in.</li>
+            <li>To submit a request, browse to the <strong>Home Page</strong> and select <strong>Submit a Request</strong>.</li>
+            <li>x</li>
+            <li>x</li>
+        </ul>
+    </div>
     <hr />
 
     <div id="Faq">
