--- a/HeartOfGold/Views/Shared/_AdminNavBar.cshtml
+++ b/HeartOfGold/Views/Shared/_AdminNavBar.cshtml
@@ -14,7 +14,7 @@
             <ul class="nav navbar-nav">
                 <li>@Html.ActionLink("Dashboard", "Dashboard", "Home")</li>
                 <li>@Html.ActionLink("Our Mission", "About", "Home")</li>
-                <li>@Html.ActionLink("Need help?", "Index", "Help")</li>
+                <li>@Html.ActionLink("Get Started", "Index", "Help")</li>
             </ul>
             @Html.Partial("_LoginPartial")
         </div>
