--- a/HeartOfGold/Views/Home/Dashboard.cshtml
+++ b/HeartOfGold/Views/Home/Dashboard.cshtml
@@ -50,128 +50,128 @@
     </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
-
-<div class="row">
-    <div class="col md-12">
-        <div class="panel panel-default" id="dashboardPanel">
-            <div class="row">
-                <div class="col-md-1 center" style="padding-right: 0; padding-top: 4px;">
-                    <i class="far fa-clock" style="font-size: 3rem;"></i>
-                </div>
-                <div class="col-md-3" style="padding-left: 0; padding-top: 7px; font-weight:100">
-                    <div id="time" style="margin-left: -10px">
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="panel panel-default" id="dashboardPanel">
+                <div class="row">
+                    <div class="col-md-1 center" style="padding-right: 0; padding-top: 4px;">
+                        <i class="far fa-clock" style="font-size: 3rem;"></i>
                     </div>
-                </div>
-                <div class="center">
-                    <h3 style="margin: 2px; margin-bottom: -8px; margin-right: 30%;">Dashboard</h3>
-                    <hr />
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="panel panel-default" style="background: #ebebec">
-                        <h5 id="QuickLinksHeader">Navigation</h5>
-                        <ul class="list-group">
-                            <li class="list-group-item">
-                                <a href="@Url.Action("Index", "Home")">
-                                    <i class="fas fa-home"></i>
-                                    &nbsp;Home
-                                </a>
-                            </li>
-                            <li class="list-group-item">
-                                <a href="@Url.Action("Index", "Item")">
-                                    <i class="fas fa-th-list"></i>
-                                    &nbsp;Donation Inventory
-                                </a>
-                            </li>
-                            <li class="list-group-item">
-                                <span class="badge">@Model.OutstandingStudentRequests</span>
-                                <a href="@Url.Action("Index", "Request")">
-                                    <i class="fas fa-address-card"></i>
-                                    &nbsp;Student Requests
-                                </a>
-                            </li>
-                            <li class="list-group-item">
-                                <a href="@Url.Action("Index", "Donors")">
-                                    <i class="fas fa-users"></i>
-                                    &nbsp;Donors
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="panel panel-default" id="dashboardStudent">
-                        <i class="fas fa-envelope" id="mailIcon"></i>
-                        <div class="center">
-                            <a href="" data-toggle="modal" data-target="#emailModal">
-                                Quick Send Email
-                            </a>
+                    <div class="col-md-3" style="padding-left: 0; padding-top: 7px; font-weight:100">
+                        <div id="time" style="margin-left: -10px">
                         </div>
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="panel panel-default" id="dashboardStudent">
-                        <i class="fas fa-user-friends" id="dashStudIcon"></i>
-                        <p class="lead" id="studLead">Registered students: @Model.NumberOfStudents</p>
-                        <div class="center" id="studLink">
-                            <a href="@Url.Action("Current", "Student")">
-                                I want to see the currently signed up students
-                            </a>
-                        </div>
+                    <div class="center">
+                        <h3 style="margin: 2px; margin-bottom: -8px; margin-right: 30%;">Dashboard</h3>
+                        <hr />
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-8">
-                    <div class="panel panel-default" id="dashboardStudent">
-                        <div class="col-md-3" id="informatics" style="background: #ebebec">
-                            <i class="fas fa-info" id="infoIcon"></i>
-                            <p class="lead">Informatics</p>
-                        </div>
-                        <div class="col-md-6">
-                            <p class="lead" id="DonItems">Donation items in numbers:</p>
-                            <ul class="list-group" id="infoList">
-                                <li class="list-group-item" style="padding: 3px;padding-left: 12px;">
-                                    Food <p class="lead" id="li1">@Model.TotalFoodItems</p>
-                                    <a href="@Url.Action("GetDonations","Item", new { @type = "Food" })"><i class="fas fa-arrow-right arrow"></i></a>
+                <div class="row">
+                    <div class="col-md-4 col-sm-4">
+                        <div class="panel panel-default" style="background: #ebebec">
+                            <h5 id="QuickLinksHeader">Navigation</h5>
+                            <ul class="list-group">
+                                <li class="list-group-item">
+                                    <a href="@Url.Action("Index", "Home")">
+                                        <i class="fas fa-home"></i>
+                                        &nbsp;Home
+                                    </a>
                                 </li>
-                                <li class="list-group-item" style="padding: 3px;padding-left: 12px;">
-                                    Stationery <p class="lead" id="li2">@Model.TotalStationeryItems</p>
-                                    <a href="@Url.Action("GetDonations","Item", new { @type = "Stationery" })"><i class="fas fa-arrow-right arrow"></i></a>
+                                <li class="list-group-item">
+                                    <a href="@Url.Action("Index", "Item")">
+                                        <i class="fas fa-th-list"></i>
+                                        &nbsp;Donation Inventory
+                                    </a>
                                 </li>
-                                <li class="list-group-item" style="padding: 3px;padding-left: 12px;">
-                                    Clothes <p class="lead" id="li3">@Model.TotalClothesItems</p>
-                                    <a href="@Url.Action("GetDonations","Item", new { @type = "Clothing" })"><i class="fas fa-arrow-right arrow"></i></a>
+                                <li class="list-group-item">
+                                    <span class="badge">@Model.OutstandingStudentRequests</span>
+                                    <a href="@Url.Action("Index", "Request")">
+                                        <i class="fas fa-address-card"></i>
+                                        &nbsp;Student Requests
+                                    </a>
                                 </li>
-                                <li class="list-group-item" style="padding: 3px;padding-left: 12px;">
-                                    Textbooks <p class="lead" id="li4">@Model.TotalTextbookItems</p>
-                                    <a href="@Url.Action("GetDonations","Item", new { @type = "Textbook" })"><i class="fas fa-arrow-right arrow"></i></a>
-                                </li>
-                                <li class="list-group-item" style="padding: 3px;padding-left: 12px;">
-                                    Other<p class="lead" id="li5">@Model.TotalOtherItems</p>
-                                    <a href="@Url.Action("GetDonations","Item", new { @type = "Other" })"><i class="fas fa-arrow-right arrow"></i></a>
+                                <li class="list-group-item">
+                                    <a href="@Url.Action("Index", "Donors")">
+                                        <i class="fas fa-users"></i>
+                                        &nbsp;Donors
+                                    </a>
                                 </li>
                             </ul>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="panel panel-default" id="dashboardStudent">
-                        <i class="far fa-calendar-alt" id="calendarIcon"></i>
-                        <div class="center">
-                            <a href="@Url.Action("Index", "Scheduler")">
-                                View Schedule
-                            </a>
+                    <div class="col-md-4 col-sm-4">
+                            <div class="panel panel-default" id="dashboardStudent">
+                                <i class="fas fa-envelope fa-8x" id="mailIcon"></i>
+                                <div class="center">
+                                    <a href="" data-toggle="modal" data-target="#emailModal">
+                                        Quick Send Email
+                                    </a>
+                                </div>
+                          </div>
+                    </div>
+                    <div class="col-md-4 col-sm-4">
+                        <div class="panel panel-default" id="dashboardStudent">
+                            <i class="fas fa-user-friends" id="dashStudIcon"></i>
+                            <p class="lead" id="studLead">Registered students: @Model.NumberOfStudents</p>
+                            <div class="center" id="studLink">
+                                <a href="@Url.Action("Current", "Student")">
+                                    I want to see the currently signed up students
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+                <div class="row">
+                    <div class="col-md-8 col-sm-8">
+                        <div class="panel panel-default" id="dashboardStudent">
+                            <div class="col-md-3 col-sm-3" id="informatics" style="background: #ebebec">
+                                <i class="fas fa-info" id="infoIcon"></i>
+                                <p class="lead">Informatics</p>
+                            </div>
+                            <div class="col-md-6 col-sm-6">
+                                <p class="lead" id="DonItems">Donation items in numbers:</p>
+                                <ul class="list-group" id="infoList">
+                                    <li class="list-group-item" style="padding: 3px;padding-left: 12px;">
+                                        Food <p class="lead" id="li1">@Model.TotalFoodItems</p>
+                                        <a href="@Url.Action("GetDonations","Item", new { @type = "Food" })"><i class="fas fa-arrow-right arrow"></i></a>
+                                    </li>
+                                    <li class="list-group-item" style="padding: 3px;padding-left: 12px;">
+                                        Stationery <p class="lead" id="li2">@Model.TotalStationeryItems</p>
+                                        <a href="@Url.Action("GetDonations","Item", new { @type = "Stationery" })"><i class="fas fa-arrow-right arrow"></i></a>
+                                    </li>
+                                    <li class="list-group-item" style="padding: 3px;padding-left: 12px;">
+                                        Clothes <p class="lead" id="li3">@Model.TotalClothesItems</p>
+                                        <a href="@Url.Action("GetDonations","Item", new { @type = "Clothing" })"><i class="fas fa-arrow-right arrow"></i></a>
+                                    </li>
+                                    <li class="list-group-item" style="padding: 3px;padding-left: 12px;">
+                                        Textbooks <p class="lead" id="li4">@Model.TotalTextbookItems</p>
+                                        <a href="@Url.Action("GetDonations","Item", new { @type = "Textbook" })"><i class="fas fa-arrow-right arrow"></i></a>
+                                    </li>
+                                    <li class="list-group-item" style="padding: 3px;padding-left: 12px;">
+                                        Other<p class="lead" id="li5">@Model.TotalOtherItems</p>
+                                        <a href="@Url.Action("GetDonations","Item", new { @type = "Other" })"><i class="fas fa-arrow-right arrow"></i></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-4">
+                        <div class="panel panel-default" id="dashboardStudent">
+                            <i class="far fa-calendar-alt" id="calendarIcon"></i>
+                            <div class="center" style="margin-top: 15px;">
+                                <a href="@Url.Action("Index", "Scheduler")">
+                                    View Events
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
+            </div>
         </div>
     </div>
 </div>
-
 
 @section scripts
 {
