--- a/HeartOfGold/Views/Shared/_NavBar.cshtml
+++ b/HeartOfGold/Views/Shared/_NavBar.cshtml
@@ -13,7 +13,7 @@
         <div class="navbar-collapse collapse navbar-fontsize center" style="font-size:1.1em">
             <ul class="nav navbar-nav">
                 <li>@Html.ActionLink("Our Mission", "About", "Home")</li>
-                <li>@Html.ActionLink("Need help?", "Index", "Help")</li>
+                <li>@Html.ActionLink("Get Started", "Index", "Help")</li>
                 <li>@Html.ActionLink("My Profile", "Index", "Profile")</li>
             </ul>
             @Html.Partial("_LoginPartial")
