more ui updates, minor fixes to scheduler.

--- a/HeartOfGold/Views/Help/Index.cshtml
+++ b/HeartOfGold/Views/Help/Index.cshtml
@@ -15,10 +15,9 @@
     </div>
     <div>
         <ul class="text-justify">
-            <li><strong>Register</strong> an account! Log yourself in.</li>
-            <li>To submit a request, browse to the <strong>Home Page</strong> and select <strong>Submit a Request</strong>.</li>
-            <li>x</li>
-            <li>x</li>
+            <li><p class="lead" style="margin-bottom: 2px;"><strong>Register</strong> an account! Log yourself in.</p></li>
+            <li><p class="lead" style="margin-bottom: 2px;">To submit a request, browse to the <strong>Home Page</strong> and select <strong>Submit a Request</strong>.</p></li>
+            <li><p class="lead">To track your current requests, click on <strong>My Profile</strong> at the top.</p></li>
         </ul>
     </div>
     <hr />
@@ -27,7 +26,7 @@
         <h3>What is Heart of Gold?</h3>
         <div>
             <p class="lead p-text">
-                It is a free-to-use platform for students within the School of ICT at Nelson Mandela University. Students who are disadvantaged can submit a request for items they are in need of.
+                It is a free-to-use platform for students within the School of ICT at Nelson Mandela University. It allows students who are disadvantaged to submit requests for items they are in need of.
             </p>
         </div>
         <h3>How many requests am I allowed to submit?</h3>
@@ -39,13 +38,13 @@
         <h3>Who can donate to the students?</h3>
         <div>
             <p class="lead p-text">
-                Anyone who wants to!
+                Absolutely anyone can donate.
             </p>
         </div>
         <h3>How do I know what is happening with my submitted request?</h3>
         <div>
             <p class="lead p-text">
-                At the top of the web page, click on <strong>Student Requests</strong>. Then, select <strong>View My Requests</strong>. The status and progress of your request will be shown here!
+                At the top of the web page, click on <strong>My Profile</strong>. The status and progress of your request will be shown here.
             </p>
         </div>
         <h3>I am still confused about a few things. Who can I contact?</h3>
