--- a/HeartOfGold/Views/Shared/_NavBar.cshtml
+++ b/HeartOfGold/Views/Shared/_NavBar.cshtml
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
             </button>
             <img src="~/Content/Images/heart.png" alt="Logo" class="logo-image" />
-            @Html.ActionLink("< Heart of Gold >", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            @Html.ActionLink("Heart of Gold", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
 
         </div>
         <div class="navbar-collapse collapse navbar-fontsize center" style="font-size:1.1em">
